<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.youtubeclone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.youtubeclone.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.example.youtubeclone.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscription"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.youtubeclone.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.youtubeclone.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.youtubeclone.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_result" />
</navigation>